@startuml

title __APP's Class Diagram__\n

  package manager {
    class AccessPointManager {
    }
  }
  

  package tn.insat.nodebox {
    class BuildConfig {
    }
  }
  

  package tn.insat.nodebox {
    class BuildConfig {
    }
  }
  

  package tn.insat.nodebox {
    class Device {
    }
  }
  

  package adapter {
    class DeviceAdapter {
    }
  }
  

  package tn.insat.nodebox {
    class DeviceConfigActivity {
    }
  }
  

  package prtocol {
    class DeviceConfigProtocol {
    }
  }
  

  package tn.insat.nodebox {
    class ExampleInstrumentedTest {
    }
  }
  

  package tn.insat.nodebox {
    class HomeActivity {
    }
  }
  

  package tn.insat.nodebox {
    class LoginActivity {
    }
  }
  

  package prtocol {
    class MQTTHelper {
    }
  }
  

  package tn.insat.nodebox {
    class ResetPasswordActivity {
    }
  }
  

  package tn.insat.nodebox {
    class ScenesActivity {
    }
  }
  

  package tn.insat.nodebox {
    class SignupActivity {
    }
  }
  

  Device -up-|> Parcelable
  DeviceAdapter -up-|> FirestoreRecyclerAdapter
  DeviceAdapter o-- OnItemClickListener : listener
  DeviceConfigActivity -up-|> AppCompatActivity
  DeviceConfigActivity o-- Device : item
  DeviceConfigProtocol o-- Device : device
  HomeActivity -up-|> AppCompatActivity
  HomeActivity o-- DeviceAdapter : deviceAdapter
  HomeActivity o-- AccessPointManager : accessPointManager
  HomeActivity o-- MQTTHelper : mqttHelper
  LoginActivity -up-|> Activity
  ResetPasswordActivity -up-|> AppCompatActivity
  ScenesActivity -up-|> AppCompatActivity
  ScenesActivity o-- MQTTHelper : mqttHelper
  SignupActivity -up-|> Activity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
